--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -56,7 +56,7 @@
                 </select>
             </div>
 
-            <div class="col">
+            <div class="col-sm-12">
                 <h6>תחומים וסיסמא</h6>
                 <button type="button" class="form-control" routerLink="/volunteering-domain/false/{{this.mode}}">תחומי
                     התנדבות</button>
@@ -140,13 +140,9 @@
         <div class="row prograph">
             <div class="col">
                 <h6 class="inline-title"> שפות:</h6>
-                <div class="custom-control custom-checkbox"
-                    *ngFor="let item of Volunteer.Volunteer.languages" name="language">
-                    <input type="checkbox" value={{item.code_language}} id={{item.code_language}}
-                        name="{{item.name_language}}" class="custom-control-input" #ngList5="ngModel"
-                        [(ngModel)]="item.IsSelected" />
-                    <label class="custom-control-label purple" for={{item.code_language}}
-                        value="{{item.code_language}}">{{item.name_language}}</label>
+                <div class="custom-control custom-checkbox" *ngFor="let item of Volunteer.Volunteer.languages" name="language">
+                    <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="{{item.name_language}}" class="custom-control-input" #ngList5="ngModel" [(ngModel)]="item.IsSelected" />
+                    <label class="custom-control-label purple" for={{item.code_language}} value="{{item.code_language}}">{{item.name_language}}</label>
                 </div>
                 <!-- <div class="custom-control custom-checkbox">
     <div class="row prograph">
@@ -155,11 +151,11 @@
             <div  class="custom-control custom-checkbox" *ngFor="let item of list5;let index = index;trackBy:trackByIndex" name="language">
                 <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="languages" class="custom-control-input"  #ngList5="ngModel" [(ngModel)] = "l_language[index]"/> -->
 
-            <h6 class="inline-title"> שפות:</h6>        
+            <!-- <h6 class="inline-title"> שפות:</h6>        
             <div  class="custom-control custom-checkbox" *ngFor="let item of Volunteer.Volunteer.languages;let index = index; trackBy:trackByIndex" name="language">
                 <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="{{item.name_language}}" class="custom-control-input"  #ngList5="ngModel" [(ngModel)] = "item.IsSelected"/>
                 <label class="custom-control-label purple" for={{item.code_language}} value="{{item.code_language}}">{{item.name_language}}</label>
-            </div>   
+            </div>    -->
 
             <!-- <div class="custom-control custom-checkbox">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
