--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -75,11 +75,11 @@
             </div>
         </div>
         <div class="row prograph">
-            <div class="col-6">
+            <!-- <div class="col-6"> -->
                 <h6>סיסמא ואימות</h6>
                 <!-- <button type="button" class="form-control" routerLink="/volunteering-domain/true/{{this.mode}}">תחומי
                     התנדבות</button> -->
-            </div>
+            <!-- </div> -->
             <div class="col-6 second-col">
                 <input class="form-control" type="hide ? 'password' : 'text'" placeholder="סיסמא" #ngPassword="ngModel"
                     [(ngModel)]="Assisted.Assisted.password" name="password" id="password" required minlength="8"
@@ -120,13 +120,9 @@
         <!-- </div>  -->
         <div class="row prograph">
             <h6 class="inline-title"> שפות:</h6>
-            <div class="custom-control custom-checkbox" *ngFor="let item of Assisted.Assisted.languages"
-                name="language">
-                <input type="checkbox" value={{item.code_language}} id={{item.code_language}}
-                    name="{{item.name_language}}" class="custom-control-input" #ngList2="ngModel"
-                    [(ngModel)]="item.IsSelected">
-                <label class="custom-control-label purple" for={{item.code_language}}
-                    value="{{item.code_language}}">{{item.name_language}}</label>
+            <div class="custom-control custom-checkbox" *ngFor="let item of Assisted.Assisted.languages" name="language">
+                <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="{{item.name_language}}" class="custom-control-input" #ngList2="ngModel" [(ngModel)]="item.IsSelected">
+                <label class="custom-control-label purple" for={{item.code_language}}  value="{{item.code_language}}">{{item.name_language}}</label>
             </div>
             <!-- <h6 class="inline-title"> שפות:</h6>
             <div class="custom-control custom-checkbox">
@@ -165,15 +161,13 @@
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div> -->
             <!-- <div *ngif="!form.value">לפחות אחד צריך להיות מסומן</div> -->
-        </div>
-    </div>
-    <div class="section1">
+        </div>   
         <div class="button-wapper">
             <button *ngIf="this.mode=='register'" type="submit" class="btn btn-dark btn-perple btn-lg">רישום</button>
             <button *ngIf="this.mode=='update'" type="submit" class="btn btn-dark btn-perple btn-lg"> עדכון</button>
             <!-- <button  (click)="" class="btn btn-dark btn-perple btn-lg"> שבץ אותי  </button> -->
         </div>
-    </div>
+</div>
     <!-- <select class="form-select form-control" aria-label="Default select example"  #ngList4="ngModel" [(ngModel)]="Assisted.day.code_day" name="days">
         <option *ngFor="let item of list4" value="{{item.code_day}}">{{item.description}}</option>
     </select>
