--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,22 +14,21 @@
           name="password" minlength="8" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,12}">
         <div class="error" *ngIf="ngPassword.invalid&&(ngPassword.touched||ngPassword.dirty)">
           <i *ngIf="ngPassword.errors!.required">שדה חובה</i>
-          <i *ngIf="ngPassword.errors!.pattern">סיסימא חייבת להכיל לפחות שמונה תווים המורכבים מאותיות אנגליות גדולות
+          <i *ngIf="ngPassword.errors!.pattern">סיסמא חייבת להכיל לפחות שמונה תווים המורכבים מאותיות אנגליות גדולות
             וקטנות ומספרים</i>
         </div>
         <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
         <div class="first">
-          <label>
-            <h4>פעם ראשונה?</h4>
-          </label>
+          <div>
+            <br>
+            <h4>פעם ראשונה?
+              <a routerLink='/volunteer/register'>מתנדב</a>
+              <a routerLink='/assisted/register'>נעזר</a>
+            </h4>
+          </div>
           <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
                 <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
-          <a routerLink="/volunteer/register">
-            <h5 class="centrado">מתנדב</h5>
-          </a>
-          <a routerLink="/assisted/register">
-            <h5 class="centrado">נעזר</h5>
-          </a>
+     
         </div>
 
         <div class="button-wapper col-sm-12">
