--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -2,7 +2,7 @@
 <form action="/action_page.php" #myForm="ngForm" (ngSubmit)="add()" style="direction: rtl;">
     <div class="section first-section">
         <h2 class="title">מידע אישי למתנדב</h2>
-        p<div class="row rograph">
+        <div class="row rograph">
             <div class="col-6">
                 <h6>מידע אישי</h6>
                 <input class="form-control" placeholder="שם פרטי" type="text" #ngFirstName="ngModel"
