--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -22,6 +22,24 @@
                 <button class="btn btn-dark btn-perple btn-lg"> ביטול </button>
             </div>
         </div>
+        <div class="yes row prograph" *ngIf="this.userType =='assisted'">
+            <div class="col-6">
+                <button type="button" class="form-control" routerLink="/volunteering-domain">תחומי
+                    התנדבות</button>
+            </div>
+            <div class="col-6 second-col">
+            <div class="col">
+                <select class="form-select form-control" aria-label="Default select example" #ngList4="ngModel" 
+                [(ngModel)]="Volunteer.day.code_day" name="days" >
+                <option *ngFor="let item of list4" value="{{item.code_day}}">{{item.description}}</option>
+            </select>
+            <select class="form-select form-control" aria-label="Default select example" #ngList8="ngModel"
+                [(ngModel)]="Volunteer.shift.code_shift" name="shifts">
+                <option *ngFor="let item of list8" value="{{item.code_shift}}">{{item.description}}</option>
+            </select>
+           </div>
+            </div>
+        </div>
     </div>
 </form>
 
