--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,17 +19,23 @@
         </div>
         <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
         <div class="first">
-          <label>
-            <h4>פעם ראשונה?</h4>
-          </label>
+          <br>
+          <div>
+          <!-- <label> -->
+            <h4>פעם ראשונה?
+              <a routerLink="/volunteer/register">מתנדב</a>
+              <a routerLink="/assisted/register">נעזר</a> 
+            </h4>
+          </div>
+          <!-- </label> -->
           <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
                 <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
-          <a routerLink="/volunteer/register">
+          <!-- <a routerLink="/volunteer/register">
             <h5 class="centrado">מתנדב</h5>
           </a>
           <a routerLink="/assisted/register">
             <h5 class="centrado">נעזר</h5>
-          </a>
+          </a> -->
         </div>
 
         <div class="button-wapper col-sm-12">
