--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,7 +19,6 @@
         </div>
         <!-- <a routerLink="/volunteer">שכחתי את הסיסמא?</a> -->
         <div class="first">
-<<<<<<< HEAD
           <br>
           <div>
           <!-- <label> -->
@@ -37,18 +36,15 @@
           <a routerLink="/assisted/register">
             <h5 class="centrado">נעזר</h5>
           </a> -->
-=======
-          <div>
+          <!-- <div>
             <br>
             <h4>פעם ראשונה?
               <a routerLink='/volunteer/register'>מתנדב</a>
               <a routerLink='/assisted/register'>נעזר</a>
             </h4>
-          </div>
+          </div> -->
           <!-- <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">מתנדב</button>
                 <button class="btn btn-dark btn-perple1 btn-lg" type="button" routerLink="/volunteer">נעזר</button> -->
-     
->>>>>>> 75c4bb16e4eadaa126615005d1e9259f64a54c6d
         </div>
 
         <div class="button-wapper col-sm-12">
