--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -27,7 +27,7 @@
                 </div>
                 <!-- <input class="form-control" placeholder="טלפון נוסף "/> -->
                 <input type="date" class="form-control" placeholder="תאריך לידה" type="date" #ngDate="ngModel"
-                    [(ngModel)]="Assisted.Assisted.date_birth" name="date_birth" id="date_birth" />
+                    [ngModel]="Assisted.Assisted.date_birth  | date:'yyyy-MM-dd'" (ngModelChange)="Assisted.Assisted.date_birth = $event" name="date_birth" id="date_birth" />
             </div>
             <div class="col-6 second-col">
                 <input class="form-control" placeholder="שם משפחה" type="text" #ngLastName="ngModel"
